--- a/animal-random-img/src/app/app.component.html
+++ b/animal-random-img/src/app/app.component.html
@@ -19,12 +19,12 @@
   </div>
   <p>{{ status() }}</p>
   <div class="img-container">
-    <img
-      @if(imgUrl())
-      [@.disabled]="!imgUrl()"
-      [src]="imgUrl()"
-      class="img-random-animal"
-      alt=""
-    />
+    @if (imgUrl()) {
+      <img
+        [src]="imgUrl()"
+        class="img-random-animal"
+        alt="Random Animal Image "
+      />
+    }
   </div>
 </main>
