--- a/animal-random-img/src/app/app.component.scss
+++ b/animal-random-img/src/app/app.component.scss
@@ -1,6 +1,6 @@
 .button_show_animal {
-  padding: 10px 20px;
-  font-size: 16px;
+  padding: 0.5em 1em;
+  font-size: 1rem;
   cursor: pointer;
 }
 
@@ -9,19 +9,19 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 24px;
-  gap: 16px;
+  margin-top: 1.5rem;
+  gap: 1rem;
 }
 
 .img-container {
   display: flex;
   justify-content: center;
   width: 100%;
-  margin-top: 16px;
+  margin-top: 1rem;
 }
 
 .img-random-animal {
-  width: 300px;
-  height: 300px;
+  width: 50rem;
+  height: 50rem;
   object-fit: cover;
 }
